--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -4,10 +4,12 @@
 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <!-- Configuração do Jersey -->
     <servlet>
         <servlet-name>JerseyServlet</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
+            <!-- Pacote base onde estão as classes REST -->
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>br.com.ecoinsight</param-value>
         </init-param>
@@ -15,8 +17,8 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
     </servlet>
 
     <servlet-mapping>
+        <!-- URL base para a API -->
         <servlet-name>JerseyServlet</servlet-name>
-        <url-pattern>/api_teste/*</url-pattern>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
-
 </web-app>
